-- Generated RDBMS Schema
-- Dialect: PostgreSQL
-- Generated by RDBMS Builder


-- Business entities that own and manage vehicle fleets
CREATE TABLE companies (
    id UUID PRIMARY KEY,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    name VARCHAR(255) NOT NULL,
    address TEXT,
    phone_number VARCHAR(20),
    email VARCHAR(255),
    registration_number VARCHAR(100) UNIQUE,
    is_active BOOLEAN NOT NULL DEFAULT true
);

-- Lookup table for valid vehicle types
CREATE TABLE vehicle_types (
    id UUID PRIMARY KEY,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    name VARCHAR(50) NOT NULL UNIQUE,
    description TEXT,
    is_active BOOLEAN NOT NULL DEFAULT true
);

-- Lookup table for valid fuel types
CREATE TABLE fuel_types (
    id UUID PRIMARY KEY,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    name VARCHAR(50) NOT NULL UNIQUE,
    description TEXT,
    is_active BOOLEAN NOT NULL DEFAULT true
);

-- Lookup table for valid maintenance types
CREATE TABLE maintenance_types (
    id UUID PRIMARY KEY,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    name VARCHAR(100) NOT NULL UNIQUE,
    description TEXT,
    is_active BOOLEAN NOT NULL DEFAULT true
);

-- Lookup table for valid user roles
CREATE TABLE user_roles (
    id UUID PRIMARY KEY,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    name VARCHAR(50) NOT NULL UNIQUE,
    description TEXT,
    is_active BOOLEAN NOT NULL DEFAULT true
);

-- Motorized transport units owned by companies
CREATE TABLE vehicles (
    id UUID PRIMARY KEY,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    license_plate VARCHAR(20) NOT NULL UNIQUE,
    make VARCHAR(100) NOT NULL,
    model VARCHAR(100) NOT NULL,
    year INTEGER NOT NULL,
    vehicle_type_id UUID NOT NULL,
    vin VARCHAR(17) UNIQUE,
    color VARCHAR(50),
    mileage DECIMAL(10,2),
    mileage_unit VARCHAR(10) DEFAULT 'km',
    status VARCHAR(50) NOT NULL DEFAULT 'active',
    purchase_date DATE,
    company_id UUID NOT NULL,
    is_active BOOLEAN NOT NULL DEFAULT true,
    deleted_at TIMESTAMP,
    CONSTRAINT fk_vehicles_vehicle_type_id FOREIGN KEY (vehicle_type_id) REFERENCES vehicle_types(id),
    CONSTRAINT fk_vehicles_company_id FOREIGN KEY (company_id) REFERENCES companies(id)
);

-- Persons authorized to operate company vehicles
CREATE TABLE drivers (
    id UUID PRIMARY KEY,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    first_name VARCHAR(100) NOT NULL,
    last_name VARCHAR(100) NOT NULL,
    email VARCHAR(255) UNIQUE,
    phone_number VARCHAR(20),
    license_number VARCHAR(50) NOT NULL UNIQUE,
    license_expiry_date DATE NOT NULL,
    employee_id VARCHAR(50),
    company_id UUID NOT NULL,
    is_active BOOLEAN NOT NULL DEFAULT true,
    deleted_at TIMESTAMP,
    CONSTRAINT fk_drivers_company_id FOREIGN KEY (company_id) REFERENCES companies(id)
);

-- System users with role-based access control
CREATE TABLE users (
    id UUID PRIMARY KEY,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    first_name VARCHAR(100) NOT NULL,
    last_name VARCHAR(100) NOT NULL,
    email VARCHAR(255) NOT NULL UNIQUE,
    password VARCHAR(255) NOT NULL,
    role_id UUID NOT NULL,
    company_id UUID NOT NULL,
    driver_id UUID,
    is_active BOOLEAN NOT NULL DEFAULT true,
    last_login_at TIMESTAMP,
    CONSTRAINT fk_users_role_id FOREIGN KEY (role_id) REFERENCES user_roles(id),
    CONSTRAINT fk_users_company_id FOREIGN KEY (company_id) REFERENCES companies(id),
    CONSTRAINT fk_users_driver_id FOREIGN KEY (driver_id) REFERENCES drivers(id)
);

-- Historical records of driver-vehicle assignments with date ranges
CREATE TABLE driver_vehicle_assignments (
    id UUID PRIMARY KEY,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    driver_id UUID NOT NULL,
    vehicle_id UUID NOT NULL,
    start_date DATE NOT NULL,
    end_date DATE,
    is_active BOOLEAN NOT NULL DEFAULT true,
    assigned_by UUID NOT NULL,
    CONSTRAINT fk_driver_vehicle_assignments_driver_id FOREIGN KEY (driver_id) REFERENCES drivers(id),
    CONSTRAINT fk_driver_vehicle_assignments_vehicle_id FOREIGN KEY (vehicle_id) REFERENCES vehicles(id),
    CONSTRAINT fk_driver_vehicle_assignments_assigned_by FOREIGN KEY (assigned_by) REFERENCES users(id)
);

-- Planned maintenance activities for vehicles
CREATE TABLE maintenance_schedules (
    id UUID PRIMARY KEY,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    vehicle_id UUID NOT NULL,
    scheduled_date DATE NOT NULL,
    maintenance_type_id UUID NOT NULL,
    description TEXT,
    is_completed BOOLEAN NOT NULL DEFAULT false,
    completed_date DATE,
    assigned_mechanic UUID,
    CONSTRAINT fk_maintenance_schedules_vehicle_id FOREIGN KEY (vehicle_id) REFERENCES vehicles(id),
    CONSTRAINT fk_maintenance_schedules_maintenance_type_id FOREIGN KEY (maintenance_type_id) REFERENCES maintenance_types(id),
    CONSTRAINT fk_maintenance_schedules_assigned_mechanic FOREIGN KEY (assigned_mechanic) REFERENCES users(id)
);

-- Records of fuel consumption and costs for vehicles
CREATE TABLE fuel_logs (
    id UUID PRIMARY KEY,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    vehicle_id UUID NOT NULL,
    driver_id UUID NOT NULL,
    date DATE NOT NULL,
    fuel_amount DECIMAL(10,2) NOT NULL,
    cost DECIMAL(10,2) NOT NULL,
    odometer DECIMAL(10,2),
    fuel_type_id UUID NOT NULL,
    location VARCHAR(255),
    CONSTRAINT fk_fuel_logs_vehicle_id FOREIGN KEY (vehicle_id) REFERENCES vehicles(id),
    CONSTRAINT fk_fuel_logs_driver_id FOREIGN KEY (driver_id) REFERENCES drivers(id),
    CONSTRAINT fk_fuel_logs_fuel_type_id FOREIGN KEY (fuel_type_id) REFERENCES fuel_types(id)
);

-- GPS tracking data for real-time vehicle positioning (partitioned by date)
CREATE TABLE vehicle_locations (
    id UUID PRIMARY KEY,
    vehicle_id UUID NOT NULL,
    latitude DECIMAL(9,6) NOT NULL,
    longitude DECIMAL(10,6) NOT NULL,
    timestamp TIMESTAMP NOT NULL,
    speed DECIMAL(5,2),
    heading DECIMAL(5,2),
    accuracy DECIMAL(8,2),
    CONSTRAINT fk_vehicle_locations_vehicle_id FOREIGN KEY (vehicle_id) REFERENCES vehicles(id)
);

-- Generated fleet performance reports for managers
CREATE TABLE reports (
    id UUID PRIMARY KEY,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    title VARCHAR(255) NOT NULL,
    report_type VARCHAR(100) NOT NULL,
    generated_by UUID NOT NULL,
    company_id UUID NOT NULL,
    date_range VARCHAR(100),
    parameters JSONB,
    file_path TEXT,
    file_storage_type VARCHAR(50) DEFAULT 'local',
    generated_at TIMESTAMP NOT NULL,
    CONSTRAINT fk_reports_generated_by FOREIGN KEY (generated_by) REFERENCES users(id),
    CONSTRAINT fk_reports_company_id FOREIGN KEY (company_id) REFERENCES companies(id)
);

-- Audit trail for tracking important changes to critical entities
CREATE TABLE audit_logs (
    id UUID PRIMARY KEY,
    created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    entity_type VARCHAR(100) NOT NULL,
    entity_id UUID NOT NULL,
    action VARCHAR(50) NOT NULL,
    old_values JSONB,
    new_values JSONB,
    changed_by UUID NOT NULL,
    changed_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP,
    CONSTRAINT fk_audit_logs_changed_by FOREIGN KEY (changed_by) REFERENCES users(id)
);
