erDiagram
    COMPANIES {
        uuid id PK
        timestamp created_at
        timestamp updated_at
        varchar name
        text address
        varchar phone_number
        varchar email
        varchar registration_number UK
        boolean is_active
    }
    VEHICLE-TYPES {
        uuid id PK
        timestamp created_at
        timestamp updated_at
        varchar name UK
        text description
        boolean is_active
    }
    FUEL-TYPES {
        uuid id PK
        timestamp created_at
        timestamp updated_at
        varchar name UK
        text description
        boolean is_active
    }
    MAINTENANCE-TYPES {
        uuid id PK
        timestamp created_at
        timestamp updated_at
        varchar name UK
        text description
        boolean is_active
    }
    USER-ROLES {
        uuid id PK
        timestamp created_at
        timestamp updated_at
        varchar name UK
        text description
        boolean is_active
    }
    VEHICLES {
        uuid id PK
        timestamp created_at
        timestamp updated_at
        varchar license_plate UK
        varchar make
        varchar model
        integer year
        uuid vehicle_type_id FK
        varchar vin UK
        varchar color
        decimal mileage
        varchar mileage_unit
        varchar status
        date purchase_date
        uuid company_id FK
        boolean is_active
        timestamp deleted_at
    }
    DRIVERS {
        uuid id PK
        timestamp created_at
        timestamp updated_at
        varchar first_name
        varchar last_name
        varchar email UK
        varchar phone_number
        varchar license_number UK
        date license_expiry_date
        varchar employee_id
        uuid company_id FK
        boolean is_active
        timestamp deleted_at
    }
    USERS {
        uuid id PK
        timestamp created_at
        timestamp updated_at
        varchar first_name
        varchar last_name
        varchar email UK
        varchar password
        uuid role_id FK
        uuid company_id FK
        uuid driver_id FK
        boolean is_active
        timestamp last_login_at
    }
    DRIVER-VEHICLE-ASSIGNMENTS {
        uuid id PK
        timestamp created_at
        timestamp updated_at
        uuid driver_id FK
        uuid vehicle_id FK
        date start_date
        date end_date
        boolean is_active
        uuid assigned_by FK
    }
    MAINTENANCE-SCHEDULES {
        uuid id PK
        timestamp created_at
        timestamp updated_at
        uuid vehicle_id FK
        date scheduled_date
        uuid maintenance_type_id FK
        text description
        boolean is_completed
        date completed_date
        uuid assigned_mechanic FK
    }
    FUEL-LOGS {
        uuid id PK
        timestamp created_at
        timestamp updated_at
        uuid vehicle_id FK
        uuid driver_id FK
        date date
        decimal fuel_amount
        decimal cost
        decimal odometer
        uuid fuel_type_id FK
        varchar location
    }
    VEHICLE-LOCATIONS {
        uuid id PK
        uuid vehicle_id FK
        decimal latitude
        decimal longitude
        timestamp timestamp
        decimal speed
        decimal heading
        decimal accuracy
    }
    REPORTS {
        uuid id PK
        timestamp created_at
        timestamp updated_at
        varchar title
        varchar report_type
        uuid generated_by FK
        uuid company_id FK
        varchar date_range
        jsonb parameters
        text file_path
        varchar file_storage_type
        timestamp generated_at
    }
    AUDIT-LOGS {
        uuid id PK
        timestamp created_at
        timestamp updated_at
        varchar entity_type
        uuid entity_id
        varchar action
        jsonb old_values
        jsonb new_values
        uuid changed_by FK
        timestamp changed_at
    }

    VEHICLE-TYPES ||--o{ VEHICLES : has
    COMPANIES ||--o{ VEHICLES : has
    COMPANIES ||--o{ DRIVERS : has
    USER-ROLES ||--o{ USERS : has
    COMPANIES ||--o{ USERS : has
    DRIVERS ||--|| USERS : has
    DRIVERS }o--o{ DRIVER-VEHICLE-ASSIGNMENTS : has
    VEHICLES }o--o{ DRIVER-VEHICLE-ASSIGNMENTS : has
    USERS ||--|| DRIVER-VEHICLE-ASSIGNMENTS : has
    VEHICLES ||--o{ MAINTENANCE-SCHEDULES : has
    MAINTENANCE-TYPES ||--o{ MAINTENANCE-SCHEDULES : has
    USERS ||--o{ MAINTENANCE-SCHEDULES : has
    VEHICLES ||--o{ FUEL-LOGS : has
    DRIVERS ||--o{ FUEL-LOGS : has
    FUEL-TYPES ||--o{ FUEL-LOGS : has
    VEHICLES ||--o{ VEHICLE-LOCATIONS : has
    USERS ||--o{ REPORTS : has
    COMPANIES ||--o{ REPORTS : has
    USERS ||--o{ AUDIT-LOGS : has